delete redundant /auth path
